# ARX_X5_joycon

./: .gitignore
00-sh/ROS2/2025/: 01make.sh
00-sh/ROS2/AC_one/: 03collect.sh
ARX_CAN/: arx_can.rules
ROS/X5_ws/src/ARX_X5_ros_V7/arx_x5_controller/: CMakeLists.txt
ROS/X5_ws/src/ARX_X5_ros_V7/arx_x5_controller/include/arx_x5_controller/: X5Controller.hpp
ROS/X5_ws/src/ARX_X5_ros_V7/arx_x5_controller/lib/arx_x5_src/include/arx_x5_src/interfaces/: InterfacesThread.hpp
ROS/X5_ws/src/ARX_X5_ros_V7/arx_x5_controller/src/: X5Controller.cpp
ROS2/X5_ws/src/arx_x5_ros2/arx_x5_controller/: CMakeLists.txt
ROS2/X5_ws/src/arx_x5_ros2/arx_x5_controller/config/: v2_joint_control.yaml
ROS2/X5_ws/src/arx_x5_ros2/arx_x5_controller/lib/arx_x5_src/include/arx_x5_src/interfaces/: InterfacesPy.hpp
ROS2/X5_ws/src/arx_x5_ros2/arx_x5_controller/src/: X5Controller.cpp
arx_x5_python/: test_joycon.py
joycon/joyconrobotics/: joyconrobotics.py
py/arx_x5_python/bimanual/: CMakeLists.txt
py/arx_x5_python/bimanual/lib/arx_x5_src/include/arx_x5_src/interfaces/: InterfacesThread.hpp
py/arx_x5_python/bimanual/script/: single_arm.py
py/arx_x5_python/bimanual/src/: single_arm_interface.cpp
